--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "chekun/laravel4sae",
     "description": "This package lets you run Laravel4 on SAE elegantly.",
     "license": "MIT",
+    "type": "library",
     "authors": [
         {
             "name": "chekun",
@@ -9,6 +10,9 @@
         }
     ],
     "require": {
-
+        "php": ">=5.3.0"
+    },
+    "autoload": {
+        "psr-0": {"Lavender\\Cloud": "src/"}
     }
 }
